fix number 7