@@ -1,12 +1,9 @@
 package org.example.solution;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 public class BoardSolution {
-    public static final Set<Character> SET_SYMBOLS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList('1', '2', '3', '4', '5', '6', '7', '8', '9', '.')));
+    private static final Set<Character> SET_SYMBOLS = Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9', '.');
 
     /**
      * Матрица должна быть валидна в соответствии с правилами:
@@ -16,9 +13,10 @@ public class BoardSolution {
      * 4) Значение ячейки валидно, если это цифра от 1 до 9 или .
      * 5) Наличие букв в качестве значений недопустимо
      **/
-    public static void isValidBoard(char[][] board) {
+    public void isValidBoard(char[][] board) {
         if (isValidRowsAndColumns(board) && isValidSymbols(board)) {
             System.out.println("Matrix is valid");
+
         } else {
             System.out.println("Matrix is not valid");
         }
@@ -27,28 +25,28 @@ public class BoardSolution {
     /**
      * Проверка строк и столбцов на уникальные цифровые значения
      **/
-    private static boolean isValidRowsAndColumns(char[][] board) {
+    private boolean isValidRowsAndColumns(char[][] board) {
         for (int i = 0; i < board.length; i++) {
             Set<Character> uniqueRow = new HashSet<>();
             Set<Character> uniqueColumn = new HashSet<>();
             for (int j = 0; j < board.length; j++) {
-                if (!addUniqueToSet(i, j, board, uniqueRow)) {
+                if (addUniqueToSet(i, j, board, uniqueRow)) {
                     return false;
-                };
-                if (!addUniqueToSet(j, i, board, uniqueColumn)) {
+                }
+                if (addUniqueToSet(j, i, board, uniqueColumn)) {
                     return false;
-                };
+                }
             }
         }
         return true;
     }
 
-    private static boolean addUniqueToSet(int i, int j, char[][] board, Set<Character> uniqueSet) {
+    private boolean addUniqueToSet(int i, int j, char[][] board, Set<Character> uniqueSet) {
         if (!uniqueSet.contains(board[i][j])) {
             uniqueSet.add(board[i][j]);
-            return true;
+            return false;
         }
-        return board[i][j] == '.';
+        return board[i][j] != '.';
     }
 
     /**
